Removed some controls

--- a/public/index.html
+++ b/public/index.html
@@ -4,212 +4,143 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Pose Estimation - Bicep Curl Counter</title>
+    <title>AI Bicep Curl Counter</title>
     <link rel="stylesheet" href="style.css">
-
-    <!-- PWA Manifest -->
-    <link rel="manifest" href="manifest.json">
-
-    <!-- Apple Touch Icons -->
-    <link rel="apple-touch-icon" href="icon-192.png">
-    <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png">
-    <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png">
-
-    <!-- Theme Color -->
-    <meta name="theme-color" content="#0f0c29">
-
-    <!-- PWA Capabilities -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="mobile-web-app-capable" content="yes">
 </head>
 
 <body>
     <div class="container">
         <header>
-            <h1>🤖 AI Pose Estimation</h1>
-            <p class="subtitle">Bicep Curl Counter with MediaPipe & Python API</p>
+            <h1>🏋️ AI Bicep Curl Counter</h1>
+            <p class="subtitle">Real-time pose detection with skeleton visualization</p>
         </header>
 
         <div class="content">
-            <!-- Video Feed Section -->
+            <!-- Video Feed with Overlay -->
             <div class="video-section">
                 <div class="video-container">
-                    <video id="webcam" autoplay playsinline muted
-                        aria-label="Live camera feed for pose detection"></video>
-                    <canvas id="overlayCanvas" aria-hidden="true"></canvas>
+                    <video id="webcam" autoplay playsinline muted></video>
+                    <canvas id="overlayCanvas"></canvas>
 
-                    <div class="angle-overlay">
-                        <div class="angle-display">
+                    <div class="overlay-display">
+                        <div class="angle-info">
                             <span id="angleDisplay">Angle: --°</span>
-                            <div class="angle-bar">
-                                <div class="angle-fill" id="angleFill"></div>
+                            <div class="angle-meter">
+                                <div class="angle-progress" id="angleProgress"></div>
                             </div>
                         </div>
-                        <span id="apiStatus" class="api-status">API: Ready</span>
-                    </div>
-
-                    <div class="processing-mode">
-                        <span id="processingMode">Processing Mode: API</span>
-                        <button id="fullscreenBtn" class="fullscreen-btn" title="Toggle fullscreen mode"
-                            aria-label="Toggle fullscreen">⛶</button>
-                    </div>
-
-                    <div class="motion-trail-info">
-                        <span class="trail-label">Motion Trail:</span>
-                        <label for="trailToggle" class="switch-label">
-                            <input type="checkbox" id="trailToggle" checked aria-checked="true" role="switch"
-                                aria-label="Toggle motion trail visualization">
-                            <span class="slider"></span>
-                        </label>
+                        <div class="status-info">
+                            <span id="poseStatus" class="pose-status">Detecting...</span>
+                        </div>
                     </div>
                 </div>
 
-                <div class="instructions">
-                    <h3>📋 Instructions:</h3>
+                <div class="quick-instructions">
+                    <h3>📋 How to use:</h3>
                     <ol>
-                        <li>Allow camera access when prompted</li>
-                        <li>Stand 2-3 meters from camera</li>
-                        <li>Ensure good lighting</li>
-                        <li>Perform bicep curls with right arm</li>
-                        <li>Keep your whole body visible</li>
+                        <li>Allow camera access</li>
+                        <li>Stand facing camera</li>
+                        <li>Perform bicep curls</li>
+                        <li>Keep your right arm visible</li>
                     </ol>
-                    <div class="mobile-tips">
-                        <h4>📱 Mobile Tips:</h4>
-                        <ul>
-                            <li>Tap counter to reset</li>
-                            <li>Pinch to zoom video</li>
-                            <li>Double tap to toggle camera</li>
-                        </ul>
-                    </div>
                 </div>
             </div>
 
-            <!-- Stats & Controls Section -->
-            <div class="stats-section">
-                <!-- Stats Card -->
-                <div class="stats-card">
-                    <h2>📊 Statistics</h2>
-
-                    <div class="stat">
-                        <label for="counter" class="stat-label">Total Reps</label>
-                        <div class="stat-value-container" id="counterContainer">
-                            <div class="stat-value" id="counter" role="status" aria-live="polite" tabindex="0">0</div>
-                            <div class="rep-badge" id="repBadge">REPS</div>
-                        </div>
+            <!-- Stats Panel -->
+            <div class="stats-panel">
+                <!-- Counter Display -->
+                <div class="counter-card">
+                    <h2>📊 Rep Counter</h2>
+                    <div class="counter-display">
+                        <div class="counter-value" id="counter">0</div>
+                        <div class="counter-label">REPS</div>
                     </div>
 
-                    <div class="stat">
-                        <label class="stat-label">Current Stage</label>
-                        <div class="stage-indicator">
-                            <div class="stage-content">
-                                <span id="stageText" aria-live="polite">Waiting...</span>
-                                <div class="stage-progress" id="stageProgress" role="progressbar" aria-valuemin="0"
-                                    aria-valuemax="100" aria-valuenow="50"></div>
+                    <div class="counter-controls">
+                        <button id="resetBtn" class="btn btn-reset" aria-label="Reset counter">
+                            <span class="btn-icon">🔄</span>
+                            <span class="btn-text">Reset Counter</span>
+                        </button>
+
+                        <button id="apiToggle" class="btn btn-api" aria-label="Toggle processing mode">
+                            <span class="btn-icon">🌐</span>
+                            <span class="btn-text">API Mode: ON</span>
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Real-time Stats -->
+                <div class="real-time-stats">
+                    <h2>⚡ Live Metrics</h2>
+
+                    <div class="metrics-grid">
+                        <div class="metric">
+                            <div class="metric-label">Arm Angle</div>
+                            <div class="metric-value" id="angleValue">--°</div>
+                            <div class="metric-bar">
+                                <div class="metric-fill" id="angleBar"></div>
+                            </div>
+                        </div>
+
+                        <div class="metric">
+                            <div class="metric-label">Current Stage</div>
+                            <div class="metric-stage">
+                                <span id="stageText" class="stage-text">Waiting</span>
+                                <div class="stage-indicator" id="stageIndicator"></div>
+                            </div>
+                        </div>
+
+                        <div class="metric">
+                            <div class="metric-label">Processing</div>
+                            <div class="metric-value" id="processingMode">API</div>
+                            <div class="metric-sub" id="apiLatency">Latency: --ms</div>
+                        </div>
+
+                        <div class="metric">
+                            <div class="metric-label">Performance</div>
+                            <div class="metric-value" id="fpsCounter">-- FPS</div>
+                            <div class="metric-sub" id="detectionStatus">Ready</div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Skeleton Preview -->
+                <div class="skeleton-preview">
+                    <h2>🦴 Skeleton Detection</h2>
+                    <div class="skeleton-info">
+                        <div class="landmark-points">
+                            <div class="landmark shoulder">
+                                <span class="landmark-dot" style="background: #4cc9f0;"></span>
+                                <span class="landmark-label">Shoulder</span>
+                            </div>
+                            <div class="landmark elbow">
+                                <span class="landmark-dot" style="background: #ff6b6b;"></span>
+                                <span class="landmark-label">Elbow</span>
+                            </div>
+                            <div class="landmark wrist">
+                                <span class="landmark-dot" style="background: #ffd166;"></span>
+                                <span class="landmark-label">Wrist</span>
+                            </div>
+                        </div>
+                        <div class="connection-lines">
+                            <div class="connection" style="border-color: #4cc9f0;">
+                                <span>Shoulder → Elbow</span>
+                            </div>
+                            <div class="connection" style="border-color: #ff6b6b;">
+                                <span>Elbow → Wrist</span>
                             </div>
                         </div>
                     </div>
-
-                    <div class="stat">
-                        <label for="angleValue" class="stat-label">Arm Angle</label>
-                        <div class="angle-visual">
-                            <div class="angle-circle">
-                                <div class="angle-circle-fill" id="angleCircleFill"></div>
-                                <div class="angle-circle-text" id="angleValue" aria-live="polite">--°</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Controls Card -->
-                <div class="controls-card">
-                    <h2>⚙️ Controls</h2>
-
-                    <div class="controls-grid">
-                        <button id="resetBtn" class="btn btn-reset" aria-label="Reset counter to zero">
-                            <span class="btn-icon" aria-hidden="true">🔄</span>
-                            <span class="btn-text">Reset</span>
-                        </button>
-
-                        <button id="cameraBtn" class="btn btn-camera" aria-label="Start or stop camera">
-                            <span class="btn-icon" aria-hidden="true">📷</span>
-                            <span class="btn-text">Camera</span>
-                        </button>
-
-                        <button id="apiToggle" class="btn btn-api"
-                            aria-label="Switch between API and browser processing">
-                            <span class="btn-icon" aria-hidden="true">🌐</span>
-                            <span class="btn-text">API Mode</span>
-                        </button>
-
-                        <button id="drawToggle" class="btn btn-draw" aria-label="Show or hide skeleton overlay">
-                            <span class="btn-icon" aria-hidden="true">🦴</span>
-                            <span class="btn-text">Skeleton</span>
-                        </button>
-                    </div>
-
-                    <div class="status-grid">
-                        <div class="status-item">
-                            <span class="status-label">Camera:</span>
-                            <span class="status-value" id="cameraStatus" aria-live="polite">Initializing...</span>
-                        </div>
-                        <div class="status-item">
-                            <span class="status-label">API Latency:</span>
-                            <span class="status-value" id="apiLatency" aria-live="polite">-- ms</span>
-                        </div>
-                        <div class="status-item">
-                            <span class="status-label">FPS:</span>
-                            <span class="status-value" id="fpsCounter" aria-live="polite">--</span>
-                        </div>
-                        <div class="status-item">
-                            <span class="status-label">Battery:</span>
-                            <span class="status-value" id="batteryStatus" aria-live="polite">--%</span>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Mobile Quick Actions -->
-                <div class="mobile-actions" id="mobileActions">
-                    <button class="mobile-btn" id="quickReset" aria-label="Quick reset counter">
-                        <span>🔄 Reset</span>
-                    </button>
-                    <button class="mobile-btn" id="quickCamera" aria-label="Quick camera toggle">
-                        <span>📷 Camera</span>
-                    </button>
-                    <button class="mobile-btn" id="quickMode" aria-label="Quick mode switch">
-                        <span>🌐 API/Browser</span>
-                    </button>
-                </div>
-
-                <!-- Info Card -->
-                <div class="info-card">
-                    <details>
-                        <summary>
-                            <h2 class="info-summary">ℹ️ System Info</h2>
-                        </summary>
-                        <div class="info-content">
-                            <ul>
-                                <li><strong>Backend:</strong> Python + OpenCV + MediaPipe</li>
-                                <li><strong>Frontend:</strong> HTML5 Camera API</li>
-                                <li><strong>Processing:</strong> Serverless API on Vercel</li>
-                                <li><strong>Detection:</strong> Real-time pose estimation</li>
-                                <li><strong>Features:</strong> Motion trails, angle arcs, skeleton overlay</li>
-                                <li><strong>Privacy:</strong> Images processed on server, not stored</li>
-                            </ul>
-                        </div>
-                    </details>
+                    <p class="skeleton-note">Skeleton lines and points are drawn in real-time over your video feed</p>
                 </div>
             </div>
         </div>
 
         <footer>
-            <p>Built with Python + MediaPipe | Deployed on Vercel Serverless</p>
-            <p class="footer-note">Note: First request may be slow due to serverless cold start</p>
-            <p class="mobile-note">📱 Optimized for mobile devices</p>
+            <p>Real-time pose estimation with MediaPipe | Python API backend</p>
+            <p class="footer-note">Automatically draws skeleton lines and landmarks when body is detected</p>
         </footer>
     </div>
-
-    <div class="vibration-feedback" id="vibrationFeedback" aria-hidden="true"></div>
 
     <script src="script.js"></script>
 </body>
