--- a/public/index.html
+++ b/public/index.html
@@ -4,198 +4,200 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Bicep Curl Counter - Full Body Landmarks</title>
+    <title>Full Body Pose Detection - Dual Arm Angles</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
         <header>
-            <h1>🦴 Full Body Pose Detection</h1>
-            <p class="subtitle">33 Landmark Points with Complete Skeleton Visualization</p>
+            <h1>🤸 Full Body Pose Detection</h1>
+            <p class="subtitle">Real-time dual arm angle tracking with correct left/right mapping</p>
         </header>
 
         <div class="content">
-            <!-- Video Feed with Overlay -->
+            <!-- Video Feed -->
             <div class="video-section">
                 <div class="video-container">
+                    <!-- Remove scaleX(-1) transform to fix mirror issue -->
                     <video id="webcam" autoplay playsinline muted></video>
                     <canvas id="overlayCanvas"></canvas>
 
                     <div class="overlay-display">
-                        <div class="angle-info">
-                            <span id="angleDisplay">Angle: --°</span>
-                            <div class="angle-meter">
-                                <div class="angle-progress" id="angleProgress"></div>
+                        <div class="angle-display-group">
+                            <div class="angle-display-left">
+                                <span class="angle-label">Left Arm</span>
+                                <span id="leftAngleDisplay" class="angle-value">--°</span>
+                            </div>
+                            <div class="angle-display-right">
+                                <span class="angle-label">Right Arm</span>
+                                <span id="rightAngleDisplay" class="angle-value">--°</span>
                             </div>
                         </div>
-                        <div class="stats-info">
-                            <span id="landmarkCount" class="landmark-count">Landmarks: 0/33</span>
-                            <span id="poseStatus" class="pose-status">Detecting...</span>
+                        <div class="detection-info">
+                            <span id="landmarkCount" class="landmark-count">Points: 0/33</span>
+                            <span id="poseStatus" class="pose-status">Initializing...</span>
                         </div>
                     </div>
                 </div>
 
-                <div class="landmarks-info">
-                    <h3>📍 MediaPipe Landmarks (33 Points)</h3>
-                    <div class="landmark-groups">
-                        <div class="landmark-group">
-                            <h4>Face & Head (0-10)</h4>
-                            <div class="landmark-list">
-                                <span>0: Nose</span>
-                                <span>1-2: Eyes</span>
-                                <span>3-4: Ears</span>
-                                <span>5-10: Mouth</span>
-                            </div>
-                        </div>
-                        <div class="landmark-group">
-                            <h4>Upper Body (11-16)</h4>
-                            <div class="landmark-list">
-                                <span>11-12: Shoulders</span>
-                                <span>13-14: Elbows</span>
-                                <span>15-16: Wrists</span>
-                            </div>
-                        </div>
-                        <div class="landmark-group">
-                            <h4>Lower Body (23-32)</h4>
-                            <div class="landmark-list">
-                                <span>23-24: Hips</span>
-                                <span>25-26: Knees</span>
-                                <span>27-28: Ankles</span>
-                                <span>29-32: Heels/Toes</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Stats & Controls -->
-            <div class="stats-panel">
-                <!-- Counter Display -->
-                <div class="counter-card">
-                    <h2>🏋️ Bicep Curl Counter</h2>
+                <div class="controls-panel">
                     <div class="counter-display">
-                        <div class="counter-value" id="counter">0</div>
-                        <div class="counter-label">REPETITIONS</div>
-                    </div>
-
-                    <div class="arm-angle">
-                        <div class="angle-gauge">
-                            <div class="angle-circle">
-                                <div class="angle-circle-fill" id="angleCircleFill"></div>
-                                <div class="angle-circle-text" id="angleValue">--°</div>
+                        <div class="counter-title">Bicep Curls</div>
+                        <div class="counter-group">
+                            <div class="counter-item">
+                                <span class="counter-label">Left:</span>
+                                <span id="leftCounter" class="counter-value">0</span>
+                            </div>
+                            <div class="counter-item">
+                                <span class="counter-label">Right:</span>
+                                <span id="rightCounter" class="counter-value">0</span>
                             </div>
                         </div>
-                        <div class="angle-label">Right Arm Angle</div>
                     </div>
 
-                    <div class="counter-controls">
+                    <div class="action-buttons">
                         <button id="resetBtn" class="btn btn-reset">
                             <span class="btn-icon">🔄</span>
-                            <span class="btn-text">Reset Counter</span>
+                            <span class="btn-text">Reset All</span>
                         </button>
 
                         <button id="apiToggle" class="btn btn-api">
                             <span class="btn-icon">🌐</span>
-                            <span class="btn-text">API Mode: ON</span>
+                            <span class="btn-text">API Mode</span>
                         </button>
                     </div>
                 </div>
+            </div>
 
-                <!-- Real-time Detection Stats -->
-                <div class="detection-stats">
-                    <h2>📈 Detection Statistics</h2>
-
-                    <div class="stats-grid">
-                        <div class="stat-box">
-                            <div class="stat-label">Detected Landmarks</div>
-                            <div class="stat-value" id="detectedLandmarks">0</div>
-                            <div class="stat-bar">
-                                <div class="stat-fill" id="landmarkBar"></div>
+            <!-- Stats Panel -->
+            <div class="stats-panel">
+                <!-- Real-time Angles -->
+                <div class="angles-card">
+                    <h2>📐 Dual Arm Angles</h2>
+                    <div class="angles-display">
+                        <div class="angle-gauge left-angle">
+                            <div class="gauge-header">
+                                <span class="arm-label">Left Arm</span>
+                                <span id="leftAngleValue" class="angle-text">--°</span>
                             </div>
-                            <div class="stat-sub">out of 33 points</div>
-                        </div>
-
-                        <div class="stat-box">
-                            <div class="stat-label">Current Stage</div>
-                            <div class="stage-display">
-                                <span id="stageText" class="stage-text">Waiting</span>
-                                <div class="stage-indicator" id="stageIndicator"></div>
-                            </div>
-                            <div class="stage-hint" id="stageHint">Perform bicep curls</div>
-                        </div>
-
-                        <div class="stat-box">
-                            <div class="stat-label">Processing Mode</div>
-                            <div class="mode-display">
-                                <span id="processingMode" class="mode-text">Python API</span>
-                                <div class="mode-detail" id="apiLatency">Latency: -- ms</div>
-                            </div>
-                            <div class="mode-hint" id="processingHint">Real-time analysis</div>
-                        </div>
-
-                        <div class="stat-box">
-                            <div class="stat-label">Performance</div>
-                            <div class="performance-display">
-                                <span id="fpsCounter" class="fps-text">-- FPS</span>
-                                <div class="confidence-display">
-                                    <span>Confidence: </span>
-                                    <span id="confidenceValue">--%</span>
+                            <div class="gauge-circle">
+                                <div class="circle-fill" id="leftAngleFill"></div>
+                                <div class="circle-center">
+                                    <div class="angle-stage" id="leftStage">--</div>
                                 </div>
                             </div>
-                            <div class="performance-hint" id="performanceHint">Smooth tracking</div>
+                            <div class="gauge-footer">
+                                <div class="stage-indicator" id="leftStageIndicator"></div>
+                                <span class="stage-text" id="leftStageText">Ready</span>
+                            </div>
+                        </div>
+
+                        <div class="angle-gauge right-angle">
+                            <div class="gauge-header">
+                                <span class="arm-label">Right Arm</span>
+                                <span id="rightAngleValue" class="angle-text">--°</span>
+                            </div>
+                            <div class="gauge-circle">
+                                <div class="circle-fill" id="rightAngleFill"></div>
+                                <div class="circle-center">
+                                    <div class="angle-stage" id="rightStage">--</div>
+                                </div>
+                            </div>
+                            <div class="gauge-footer">
+                                <div class="stage-indicator" id="rightStageIndicator"></div>
+                                <span class="stage-text" id="rightStageText">Ready</span>
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Skeleton Connections Map -->
-                <div class="skeleton-map">
-                    <h2>🦴 Skeleton Connections</h2>
-                    <div class="connections-info">
-                        <div class="connections-grid">
-                            <div class="connection-group">
-                                <h4>Face & Head Lines</h4>
-                                <div class="connection-list">
-                                    <div class="connection-item">Nose → Left Eye</div>
-                                    <div class="connection-item">Nose → Right Eye</div>
-                                    <div class="connection-item">Left Eye → Left Ear</div>
-                                    <div class="connection-item">Right Eye → Right Ear</div>
-                                    <div class="connection-item">Mouth → Left Eye</div>
-                                    <div class="connection-item">Mouth → Right Eye</div>
-                                </div>
-                            </div>
-
-                            <div class="connection-group">
-                                <h4>Upper Body Lines</h4>
-                                <div class="connection-list">
-                                    <div class="connection-item">Shoulder → Shoulder</div>
-                                    <div class="connection-item">Shoulder → Elbow</div>
-                                    <div class="connection-item">Elbow → Wrist</div>
-                                    <div class="connection-item">Shoulder → Hip</div>
-                                    <div class="connection-item">Hip → Hip</div>
-                                </div>
-                            </div>
-
-                            <div class="connection-group">
-                                <h4>Lower Body Lines</h4>
-                                <div class="connection-list">
-                                    <div class="connection-item">Hip → Knee</div>
-                                    <div class="connection-item">Knee → Ankle</div>
-                                    <div class="connection-item">Ankle → Heel</div>
-                                    <div class="connection-item">Ankle → Toe</div>
-                                    <div class="connection-item">Heel → Toe</div>
+                <!-- Performance Stats -->
+                <div class="performance-card">
+                    <h2>📊 Performance</h2>
+                    <div class="stats-grid">
+                        <div class="stat-item">
+                            <div class="stat-icon">🎯</div>
+                            <div class="stat-content">
+                                <div class="stat-label">Landmarks Detected</div>
+                                <div class="stat-value" id="detectedPoints">0</div>
+                                <div class="stat-progress">
+                                    <div class="progress-bar">
+                                        <div class="progress-fill" id="landmarksProgress"></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <p class="map-note">All 33 landmark points and skeleton connections are drawn in real-time</p>
+
+                        <div class="stat-item">
+                            <div class="stat-icon">⚡</div>
+                            <div class="stat-content">
+                                <div class="stat-label">Processing Mode</div>
+                                <div class="stat-value" id="processingMode">API</div>
+                                <div class="stat-detail" id="latencyDisplay">Latency: --ms</div>
+                            </div>
+                        </div>
+
+                        <div class="stat-item">
+                            <div class="stat-icon">📈</div>
+                            <div class="stat-content">
+                                <div class="stat-label">Frame Rate</div>
+                                <div class="stat-value" id="fpsCounter">-- FPS</div>
+                                <div class="stat-detail" id="confidenceDisplay">Confidence: --%</div>
+                            </div>
+                        </div>
+
+                        <div class="stat-item">
+                            <div class="stat-icon">🤖</div>
+                            <div class="stat-content">
+                                <div class="stat-label">Detection Status</div>
+                                <div class="stat-value" id="detectionStatus">Ready</div>
+                                <div class="stat-detail" id="armVisibility">Arms: --</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Landmark Legend -->
+                <div class="legend-card">
+                    <h2>📍 Landmark Colors</h2>
+                    <div class="legend-grid">
+                        <div class="legend-item">
+                            <span class="legend-dot" style="background: #FF6B6B;"></span>
+                            <span class="legend-text">Left Side Points</span>
+                        </div>
+                        <div class="legend-item">
+                            <span class="legend-dot" style="background: #4CC9F0;"></span>
+                            <span class="legend-text">Right Side Points</span>
+                        </div>
+                        <div class="legend-item">
+                            <span class="legend-dot" style="background: #FFD166;"></span>
+                            <span class="legend-text">Center Points</span>
+                        </div>
+                        <div class="legend-item">
+                            <span class="legend-dot" style="background: #06D6A0;"></span>
+                            <span class="legend-text">Angle Arcs</span>
+                        </div>
+                        <div class="legend-item">
+                            <span class="legend-dot" style="background: #118AB2;"></span>
+                            <span class="legend-text">Skeleton Lines</span>
+                        </div>
+                        <div class="legend-item">
+                            <span class="legend-dot" style="background: #EF476F;"></span>
+                            <span class="legend-text">Active Arm</span>
+                        </div>
+                    </div>
+                    <div class="legend-note">
+                        <p>💡 <strong>Note:</strong> Left/right are now correctly mapped to your actual body sides</p>
+                        <p>Both elbow angles are calculated and displayed in real-time</p>
                     </div>
                 </div>
             </div>
         </div>
 
         <footer>
-            <p>Full Body Pose Detection with MediaPipe 33 Landmark Points | Real-time Skeleton Visualization</p>
-            <p class="footer-note">Displays complete human pose with all anatomical landmarks</p>
+            <p>Dual Arm Angle Tracking | Correct Left/Right Mapping | Real-time Pose Estimation</p>
+            <p class="footer-note">Shows angles for both elbows with individual curl counting</p>
         </footer>
     </div>
 
