--- a/public/index.html
+++ b/public/index.html
@@ -13,24 +13,40 @@
         <header>
             <h1>🤸 Full Body Pose Detection</h1>
             <p class="subtitle">Real-time dual arm angle tracking with correct left/right mapping</p>
+
+            <!-- Mobile-friendly summary display -->
+            <div class="mobile-summary">
+                <div class="summary-item">
+                    <span class="summary-label">Total Reps:</span>
+                    <span id="totalReps" class="summary-value">0</span>
+                </div>
+                <div class="summary-item">
+                    <span class="summary-label">Left Angle:</span>
+                    <span id="mobileLeftAngle" class="summary-value angle-left">--°</span>
+                </div>
+                <div class="summary-item">
+                    <span class="summary-label">Right Angle:</span>
+                    <span id="mobileRightAngle" class="summary-value angle-right">--°</span>
+                </div>
+            </div>
         </header>
 
         <div class="content">
             <!-- Video Feed -->
             <div class="video-section">
                 <div class="video-container">
-                    <!-- Remove scaleX(-1) transform to fix mirror issue -->
-                    <video id="webcam" autoplay playsinline muted></video>
+                    <!-- Restore mirror view -->
+                    <video id="webcam" autoplay playsinline muted style="transform: scaleX(-1);"></video>
                     <canvas id="overlayCanvas"></canvas>
 
                     <div class="overlay-display">
                         <div class="angle-display-group">
                             <div class="angle-display-left">
-                                <span class="angle-label">Left Arm</span>
+                                <span class="angle-label">Left Arm Angle</span>
                                 <span id="leftAngleDisplay" class="angle-value">--°</span>
                             </div>
                             <div class="angle-display-right">
-                                <span class="angle-label">Right Arm</span>
+                                <span class="angle-label">Right Arm Angle</span>
                                 <span id="rightAngleDisplay" class="angle-value">--°</span>
                             </div>
                         </div>
@@ -43,15 +59,12 @@
 
                 <div class="controls-panel">
                     <div class="counter-display">
-                        <div class="counter-title">Bicep Curls</div>
+                        <div class="counter-title">Bicep Curl Reps</div>
                         <div class="counter-group">
-                            <div class="counter-item">
-                                <span class="counter-label">Left:</span>
-                                <span id="leftCounter" class="counter-value">0</span>
-                            </div>
-                            <div class="counter-item">
-                                <span class="counter-label">Right:</span>
-                                <span id="rightCounter" class="counter-value">0</span>
+                            <!-- Updated: No left/right labels, just total -->
+                            <div class="counter-item total-reps">
+                                <span class="counter-label">Total Reps:</span>
+                                <span id="totalCounter" class="counter-value">0</span>
                             </div>
                         </div>
                     </div>
@@ -78,7 +91,7 @@
                     <div class="angles-display">
                         <div class="angle-gauge left-angle">
                             <div class="gauge-header">
-                                <span class="arm-label">Left Arm</span>
+                                <span class="arm-label">Left Arm Angle</span>
                                 <span id="leftAngleValue" class="angle-text">--°</span>
                             </div>
                             <div class="gauge-circle">
@@ -95,7 +108,7 @@
 
                         <div class="angle-gauge right-angle">
                             <div class="gauge-header">
-                                <span class="arm-label">Right Arm</span>
+                                <span class="arm-label">Right Arm Angle</span>
                                 <span id="rightAngleValue" class="angle-text">--°</span>
                             </div>
                             <div class="gauge-circle">
@@ -164,11 +177,11 @@
                     <div class="legend-grid">
                         <div class="legend-item">
                             <span class="legend-dot" style="background: #FF6B6B;"></span>
-                            <span class="legend-text">Left Side Points</span>
+                            <span class="legend-text">Left Arm (Screen)</span>
                         </div>
                         <div class="legend-item">
                             <span class="legend-dot" style="background: #4CC9F0;"></span>
-                            <span class="legend-text">Right Side Points</span>
+                            <span class="legend-text">Right Arm (Screen)</span>
                         </div>
                         <div class="legend-item">
                             <span class="legend-dot" style="background: #FFD166;"></span>
@@ -182,13 +195,10 @@
                             <span class="legend-dot" style="background: #118AB2;"></span>
                             <span class="legend-text">Skeleton Lines</span>
                         </div>
-                        <div class="legend-item">
-                            <span class="legend-dot" style="background: #EF476F;"></span>
-                            <span class="legend-text">Active Arm</span>
-                        </div>
                     </div>
                     <div class="legend-note">
-                        <p>💡 <strong>Note:</strong> Left/right are now correctly mapped to your actual body sides</p>
+                        <p>💡 <strong>Mirror View:</strong> Display is mirrored - left/right match what you see in the
+                            camera</p>
                         <p>Both elbow angles are calculated and displayed in real-time</p>
                     </div>
                 </div>
@@ -196,8 +206,8 @@
         </div>
 
         <footer>
-            <p>Dual Arm Angle Tracking | Correct Left/Right Mapping | Real-time Pose Estimation</p>
-            <p class="footer-note">Shows angles for both elbows with individual curl counting</p>
+            <p>Dual Arm Angle Tracking | Mirror View | Real-time Pose Estimation</p>
+            <p class="footer-note">Shows angles for both elbows with total curl counting</p>
         </footer>
     </div>
 
