Solved camera initialization error

--- a/public/index.html
+++ b/public/index.html
@@ -11,22 +11,22 @@
 <body>
     <div class="container">
         <header>
-            <h1>🤸 Full Body Pose Detection</h1>
-            <p class="subtitle">Real-time dual arm angle tracking with correct left/right mapping</p>
+            <h1>🤸 Bicep Curl Counter</h1>
+            <p class="subtitle">Real-time dual arm tracking with proper rep counting</p>
 
             <!-- Mobile-friendly summary display -->
             <div class="mobile-summary">
                 <div class="summary-item">
-                    <span class="summary-label">Left Angle:</span>
+                    <span class="summary-label">Left Angle</span>
                     <span id="mobileLeftAngle" class="summary-value angle-left">--°</span>
                 </div>
                 <div class="summary-item">
-                    <span class="summary-label">Right Angle:</span>
+                    <span class="summary-label">Right Angle</span>
                     <span id="mobileRightAngle" class="summary-value angle-right">--°</span>
                 </div>
                 <div class="summary-item">
-                    <span class="summary-label">Points:</span>
-                    <span id="mobilePoints" class="summary-value points-count">0/33</span>
+                    <span class="summary-label">Points Detected</span>
+                    <span id="mobileTotalPoints" class="summary-value">0</span>
                 </div>
             </div>
         </header>
