Fixed camera initialization error

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,9 @@
                     <!-- Mirror view -->
                     <video id="webcam" autoplay playsinline muted style="transform: scaleX(-1);"></video>
                     <canvas id="overlayCanvas"></canvas>
+                    <div class="camera-status" id="cameraStatus">
+                        Starting camera...
+                    </div>
 
                     <!-- Simplified overlay - Only reps counter -->
                     <div class="reps-overlay">
